--- a/styles2.css
+++ b/styles2.css
@@ -83,6 +83,8 @@ max-width: 800px;
   flex-direction: row;
   background-color: #29A487;
   justify-content: center;
+  padding-bottom: 10px;
+    padding-top: 10px;
 
 
 
@@ -93,18 +95,9 @@ max-width: 800px;
 .main-menu {
  font-family: Astroneer;
  font-size: 22px;
- width: 100%;
- height: 100%;
- text-align: center;
- padding-top:20px;
- padding-bottom: 15px;
-
+ margin-left:30px;
+ margin-right:67px;
    transition: 0.5s;
-
-   min-height: 50px;
-
-
-
 
 }
 
