--- a/css/styles.css
+++ b/css/styles.css
@@ -114,9 +114,13 @@ body {
 }
 
 .textColor {
-  color:#212121;
-  font-family: Mitels;
-  font-size: 6vh;
+  color:#CCA749;
+}
+
+.textFontMiddle {
+  padding-top: 10vh;
+ font-size: 3vh;
+ font-family: Mitels;
 }
 
 .bgIMG1 {
@@ -147,17 +151,18 @@ body {
 }
 
 .bgIMG4 {
-  z-index: -2;
-  display: block;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0vh;
-  background-image: url(../images/bgIMG4.png);
-  width: 100vw;
+  background-color: #212121;
+  height: 90vh;
+}
+
+.bgIMG5 {
+   height: 15vh;
+    background-color: #C75146;
 }
 
 .logoSCP {
+  animation: logoAnimShadow 6s ease-in;
+  animation-iteration-count: infinite;
   height: 40vh;
 }
 
@@ -288,18 +293,18 @@ body {
 
 @keyframes logoAnimShadow {
   0% {
-    -webkit-filter: drop-shadow(0 0 15px #A252C3);
-    filter: drop-shadow(0 0 15px #A252C3);
+    -webkit-filter: drop-shadow(0 0 0px #C75146);
+    filter: drop-shadow(0 0 0px #C75146);
   }
 
   50% {
-    -webkit-filter: drop-shadow(0 0 35px #A252C3);
-    filter: drop-shadow(0 0 35px #A252C3);
+    -webkit-filter: drop-shadow(0 0 35px #C75146);
+    filter: drop-shadow(0 0 35px #C75146);
   }
 
   100% {
-    -webkit-filter: drop-shadow(0 0 15px #A252C3);
-    filter: drop-shadow(0 0 15px #A252C3);
+    -webkit-filter: drop-shadow(0 0 0px #C75146);
+    filter: drop-shadow(0 0 0px #C75146);
   }
 }
 
